<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main">


    <EditText

        android:id="@+id/account_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/tip_account"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/tip_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/tip_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_enroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/lightslategrey"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progress_bar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
