<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <!--  登录或者注册成功后进入到个人中心从服务器返回用户名给这个  -->
    <TextView
        android:id="@+id/uname"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:text="@string/upload_numbers" />
        <TextView
            android:id="@+id/video_numbers"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_ad_list"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:text="@string/look_ad_list" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_played_number" />
        <TextView
            android:id="@+id/all_played_numbers"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

<!--  上传模块  -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="视频的本机路径："/>

            <TextView
                android:id="@+id/video_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        <EditText
            android:id="@+id/filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="请输入该广告视频名称"/>
        <EditText
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="请输入该广告视频的优先级(1-10)" />
        <EditText
            android:id="@+id/play_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="请选择该广告视频播放的时间，不选择默认按照优先级排布"/>
        <Button
            android:id="@+id/select_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="选择视频" />

        <Button
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="上传" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>